# serializer version: 1
# name: test_transcribe_flac
  MidiFile(type=1, ticks_per_beat=384, tracks=[
    MidiTrack([
      MetaMessage('set_tempo', tempo=500000, time=0),
      MetaMessage('time_signature', numerator=4, denominator=4, clocks_per_click=24, notated_32nd_notes_per_beat=8, time=0),
      MetaMessage('end_of_track', time=1)]),
    MidiTrack([
      Message('note_on', channel=0, note=57, velocity=75, time=48),
      Message('note_on', channel=0, note=60, velocity=75, time=0),
      Message('note_on', channel=0, note=53, velocity=74, time=1),
      Message('note_on', channel=0, note=50, velocity=67, time=1),
      Message('note_on', channel=0, note=57, velocity=0, time=33),
      Message('note_on', channel=0, note=53, velocity=0, time=2),
      Message('note_on', channel=0, note=60, velocity=0, time=1),
      Message('note_on', channel=0, note=50, velocity=0, time=8),
      Message('note_on', channel=0, note=53, velocity=68, time=174),
      Message('note_on', channel=0, note=43, velocity=63, time=0),
      Message('note_on', channel=0, note=55, velocity=68, time=2),
      Message('note_on', channel=0, note=59, velocity=72, time=2),
      Message('note_on', channel=0, note=43, velocity=0, time=35),
      Message('note_on', channel=0, note=55, velocity=0, time=3),
      Message('note_on', channel=0, note=53, velocity=0, time=0),
      Message('note_on', channel=0, note=59, velocity=0, time=30),
      Message('note_on', channel=0, note=52, velocity=66, time=159),
      Message('note_on', channel=0, note=60, velocity=69, time=1),
      Message('note_on', channel=0, note=48, velocity=67, time=0),
      Message('note_on', channel=0, note=55, velocity=68, time=0),
      Message('note_on', channel=0, note=55, velocity=0, time=35),
      Message('note_on', channel=0, note=48, velocity=0, time=0),
      Message('note_on', channel=0, note=52, velocity=0, time=2),
      Message('note_on', channel=0, note=60, velocity=0, time=3),
      Message('note_on', channel=0, note=36, velocity=58, time=188),
      Message('note_on', channel=0, note=36, velocity=0, time=40),
      MetaMessage('end_of_track', time=1)])
  ])
# ---
# name: test_transcribe_m4a
  MidiFile(type=1, ticks_per_beat=384, tracks=[
    MidiTrack([
      MetaMessage('set_tempo', tempo=500000, time=0),
      MetaMessage('time_signature', numerator=4, denominator=4, clocks_per_click=24, notated_32nd_notes_per_beat=8, time=0),
      MetaMessage('end_of_track', time=1)]),
    MidiTrack([
      Message('note_on', channel=0, note=57, velocity=76, time=48),
      Message('note_on', channel=0, note=53, velocity=73, time=1),
      Message('note_on', channel=0, note=60, velocity=74, time=0),
      Message('note_on', channel=0, note=50, velocity=66, time=1),
      Message('note_on', channel=0, note=57, velocity=0, time=33),
      Message('note_on', channel=0, note=53, velocity=0, time=3),
      Message('note_on', channel=0, note=60, velocity=0, time=0),
      Message('note_on', channel=0, note=50, velocity=0, time=7),
      Message('note_on', channel=0, note=43, velocity=63, time=175),
      Message('note_on', channel=0, note=53, velocity=66, time=1),
      Message('note_on', channel=0, note=55, velocity=67, time=3),
      Message('note_on', channel=0, note=59, velocity=72, time=2),
      Message('note_on', channel=0, note=43, velocity=0, time=32),
      Message('note_on', channel=0, note=53, velocity=0, time=34),
      Message('note_on', channel=0, note=55, velocity=0, time=0),
      Message('note_on', channel=0, note=59, velocity=0, time=0),
      Message('note_on', channel=0, note=52, velocity=65, time=159),
      Message('note_on', channel=0, note=48, velocity=66, time=0),
      Message('note_on', channel=0, note=60, velocity=68, time=1),
      Message('note_on', channel=0, note=55, velocity=68, time=0),
      Message('note_on', channel=0, note=48, velocity=0, time=34),
      Message('note_on', channel=0, note=55, velocity=0, time=1),
      Message('note_on', channel=0, note=52, velocity=0, time=3),
      Message('note_on', channel=0, note=60, velocity=0, time=2),
      Message('note_on', channel=0, note=36, velocity=58, time=188),
      Message('note_on', channel=0, note=36, velocity=0, time=39),
      MetaMessage('end_of_track', time=1)])
  ])
# ---
# name: test_transcribe_mp3
  MidiFile(type=1, ticks_per_beat=384, tracks=[
    MidiTrack([
      MetaMessage('set_tempo', tempo=500000, time=0),
      MetaMessage('time_signature', numerator=4, denominator=4, clocks_per_click=24, notated_32nd_notes_per_beat=8, time=0),
      MetaMessage('end_of_track', time=1)]),
    MidiTrack([
      Message('note_on', channel=0, note=57, velocity=75, time=48),
      Message('note_on', channel=0, note=53, velocity=73, time=0),
      Message('note_on', channel=0, note=60, velocity=75, time=0),
      Message('note_on', channel=0, note=50, velocity=66, time=2),
      Message('note_on', channel=0, note=57, velocity=0, time=33),
      Message('note_on', channel=0, note=53, velocity=0, time=2),
      Message('note_on', channel=0, note=60, velocity=0, time=0),
      Message('note_on', channel=0, note=50, velocity=0, time=6),
      Message('note_on', channel=0, note=43, velocity=65, time=177),
      Message('note_on', channel=0, note=53, velocity=67, time=0),
      Message('note_on', channel=0, note=55, velocity=67, time=2),
      Message('note_on', channel=0, note=59, velocity=71, time=1),
      Message('note_on', channel=0, note=43, velocity=0, time=36),
      Message('note_on', channel=0, note=55, velocity=0, time=2),
      Message('note_on', channel=0, note=53, velocity=0, time=1),
      Message('note_on', channel=0, note=59, velocity=0, time=30),
      Message('note_on', channel=0, note=52, velocity=65, time=159),
      Message('note_on', channel=0, note=48, velocity=67, time=1),
      Message('note_on', channel=0, note=60, velocity=69, time=0),
      Message('note_on', channel=0, note=55, velocity=68, time=0),
      Message('note_on', channel=0, note=55, velocity=0, time=36),
      Message('note_on', channel=0, note=48, velocity=0, time=0),
      Message('note_on', channel=0, note=52, velocity=0, time=2),
      Message('note_on', channel=0, note=60, velocity=0, time=2),
      Message('note_on', channel=0, note=36, velocity=57, time=188),
      Message('note_on', channel=0, note=36, velocity=0, time=41),
      MetaMessage('end_of_track', time=1)])
  ])
# ---
# name: test_transcribe_ogg
  MidiFile(type=1, ticks_per_beat=384, tracks=[
    MidiTrack([
      MetaMessage('set_tempo', tempo=500000, time=0),
      MetaMessage('time_signature', numerator=4, denominator=4, clocks_per_click=24, notated_32nd_notes_per_beat=8, time=0),
      MetaMessage('end_of_track', time=1)]),
    MidiTrack([
      Message('note_on', channel=0, note=57, velocity=74, time=48),
      Message('note_on', channel=0, note=60, velocity=74, time=1),
      Message('note_on', channel=0, note=53, velocity=70, time=0),
      Message('note_on', channel=0, note=50, velocity=66, time=1),
      Message('note_on', channel=0, note=57, velocity=0, time=33),
      Message('note_on', channel=0, note=53, velocity=0, time=1),
      Message('note_on', channel=0, note=60, velocity=0, time=1),
      Message('note_on', channel=0, note=50, velocity=0, time=8),
      Message('note_on', channel=0, note=43, velocity=65, time=174),
      Message('note_on', channel=0, note=53, velocity=68, time=1),
      Message('note_on', channel=0, note=55, velocity=68, time=2),
      Message('note_on', channel=0, note=59, velocity=72, time=1),
      Message('note_on', channel=0, note=43, velocity=0, time=38),
      Message('note_on', channel=0, note=53, velocity=0, time=3),
      Message('note_on', channel=0, note=59, velocity=0, time=1),
      Message('note_on', channel=0, note=55, velocity=0, time=27),
      Message('note_on', channel=0, note=52, velocity=67, time=159),
      Message('note_on', channel=0, note=60, velocity=70, time=1),
      Message('note_on', channel=0, note=48, velocity=67, time=0),
      Message('note_on', channel=0, note=55, velocity=69, time=0),
      Message('note_on', channel=0, note=48, velocity=0, time=36),
      Message('note_on', channel=0, note=55, velocity=0, time=2),
      Message('note_on', channel=0, note=52, velocity=0, time=2),
      Message('note_on', channel=0, note=60, velocity=0, time=1),
      Message('note_on', channel=0, note=36, velocity=58, time=188),
      Message('note_on', channel=0, note=36, velocity=0, time=41),
      MetaMessage('end_of_track', time=1)])
  ])
# ---
# name: test_transcribe_opus
  MidiFile(type=1, ticks_per_beat=384, tracks=[
    MidiTrack([
      MetaMessage('set_tempo', tempo=500000, time=0),
      MetaMessage('time_signature', numerator=4, denominator=4, clocks_per_click=24, notated_32nd_notes_per_beat=8, time=0),
      MetaMessage('end_of_track', time=1)]),
    MidiTrack([
      Message('note_on', channel=0, note=57, velocity=75, time=48),
      Message('note_on', channel=0, note=53, velocity=74, time=0),
      Message('note_on', channel=0, note=60, velocity=74, time=1),
      Message('note_on', channel=0, note=50, velocity=67, time=0),
      Message('note_on', channel=0, note=57, velocity=0, time=36),
      Message('note_on', channel=0, note=53, velocity=0, time=2),
      Message('note_on', channel=0, note=60, velocity=0, time=1),
      Message('note_on', channel=0, note=50, velocity=0, time=4),
      Message('note_on', channel=0, note=43, velocity=64, time=175),
      Message('note_on', channel=0, note=53, velocity=68, time=1),
      Message('note_on', channel=0, note=55, velocity=68, time=2),
      Message('note_on', channel=0, note=59, velocity=72, time=1),
      Message('note_on', channel=0, note=43, velocity=0, time=33),
      Message('note_on', channel=0, note=53, velocity=0, time=6),
      Message('note_on', channel=0, note=55, velocity=0, time=1),
      Message('note_on', channel=0, note=59, velocity=0, time=29),
      Message('note_on', channel=0, note=52, velocity=66, time=159),
      Message('note_on', channel=0, note=48, velocity=66, time=1),
      Message('note_on', channel=0, note=60, velocity=69, time=0),
      Message('note_on', channel=0, note=55, velocity=68, time=0),
      Message('note_on', channel=0, note=55, velocity=0, time=38),
      Message('note_on', channel=0, note=48, velocity=0, time=0),
      Message('note_on', channel=0, note=52, velocity=0, time=1),
      Message('note_on', channel=0, note=60, velocity=0, time=1),
      Message('note_on', channel=0, note=36, velocity=58, time=188),
      Message('note_on', channel=0, note=36, velocity=0, time=42),
      MetaMessage('end_of_track', time=1)])
  ])
# ---
# name: test_transcribe_webm
  MidiFile(type=1, ticks_per_beat=384, tracks=[
    MidiTrack([
      MetaMessage('set_tempo', tempo=500000, time=0),
      MetaMessage('time_signature', numerator=4, denominator=4, clocks_per_click=24, notated_32nd_notes_per_beat=8, time=0),
      MetaMessage('end_of_track', time=1)]),
    MidiTrack([
      Message('note_on', channel=0, note=57, velocity=75, time=48),
      Message('note_on', channel=0, note=53, velocity=74, time=0),
      Message('note_on', channel=0, note=60, velocity=74, time=1),
      Message('note_on', channel=0, note=50, velocity=67, time=0),
      Message('note_on', channel=0, note=57, velocity=0, time=36),
      Message('note_on', channel=0, note=53, velocity=0, time=2),
      Message('note_on', channel=0, note=60, velocity=0, time=1),
      Message('note_on', channel=0, note=50, velocity=0, time=4),
      Message('note_on', channel=0, note=43, velocity=64, time=175),
      Message('note_on', channel=0, note=53, velocity=68, time=1),
      Message('note_on', channel=0, note=55, velocity=68, time=2),
      Message('note_on', channel=0, note=59, velocity=72, time=1),
      Message('note_on', channel=0, note=43, velocity=0, time=33),
      Message('note_on', channel=0, note=53, velocity=0, time=6),
      Message('note_on', channel=0, note=55, velocity=0, time=1),
      Message('note_on', channel=0, note=59, velocity=0, time=29),
      Message('note_on', channel=0, note=52, velocity=66, time=159),
      Message('note_on', channel=0, note=48, velocity=66, time=1),
      Message('note_on', channel=0, note=60, velocity=69, time=0),
      Message('note_on', channel=0, note=55, velocity=68, time=0),
      Message('note_on', channel=0, note=55, velocity=0, time=38),
      Message('note_on', channel=0, note=48, velocity=0, time=0),
      Message('note_on', channel=0, note=52, velocity=0, time=1),
      Message('note_on', channel=0, note=60, velocity=0, time=1),
      Message('note_on', channel=0, note=36, velocity=58, time=188),
      Message('note_on', channel=0, note=36, velocity=0, time=42),
      MetaMessage('end_of_track', time=1)])
  ])
# ---
